# egui-charts

./: Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md  ROADMAP.md
.github/workflows/: ci.yml  release.yml
examples/: basic_chart.rs  drawing_tools.rs  tauri_integration.rs  with_indicators.rs
examples/demo/: .gitignore  Cargo.toml  index.html  main.rs
src/: data.rs  lib.rs  templates.rs  theming.rs
src/backtest/: config.rs  engine.rs  metrics.rs  mod.rs  portfolio.rs  strategy.rs  trade.rs
src/chart/: builder.rs  helpers.rs  interaction.rs  mod.rs  pan_zoom.rs  series_api.rs  state.rs
src/chart/coords/: mod.rs
src/chart/cursor_modes/: eraser.rs  mod.rs
src/chart/hit_test/: mod.rs
src/chart/indicators/: hit_test.rs  mod.rs  selection.rs  selection_render.rs
src/chart/overlays/: heatmap_strip.rs  mod.rs  order_lines.rs  volume_bubbles.rs
src/chart/renderers/: bar.rs  candle.rs  context.rs  crosshair.rs  grid.rs  indicator.rs  labels.rs  markers.rs  mod.rs  session_breaks.rs  tooltip.rs  volume.rs
src/chart/rendering/: axes.rs  grid.rs  mod.rs  pipeline.rs
src/chart/selection/: mod.rs
src/chart/series/: area.rs  bars.rs  baseline.rs  histogram.rs  hit_test.rs  line.rs  mod.rs  selection.rs  selection_render.rs  settings.rs  types.rs
src/chart/tool_interaction/: effects.rs  interaction.rs  mod.rs  selection.rs
src/config/: chart.rs  crosshair.rs  interaction.rs  keyboard.rs  kinetic.rs  mod.rs  timescale.rs  tooltip.rs
src/drawings/: categories.rs  manager.rs  mod.rs  persistence.rs  repositories.rs
src/drawings/domain/: coordinates.rs  drawing.rs  mod.rs  options.rs
src/drawings/rendering/: channels.rs  cycles.rs  elliott.rs  (+11 more)
src/ext/: context_ext.rs  design_tokens.rs  mod.rs  response_ext.rs  ui_ext.rs  widget_ext.rs
src/icons/: icon.rs  mod.rs
src/model/: annotations.rs  chart_type.rs  chartstate.rs  color.rs  date_range.rs  footprint.rs  kagi.rs  line_break.rs  markers.rs  mod.rs  point_figure.rs  price_source.rs  quote.rs  range_bar.rs  renko.rs  session.rs  symbol.rs  symbol_info.rs  timeframe.rs  timescale.rs  tpo.rs
src/scales/: dual_pricescale.rs  mod.rs  price_display.rs  price_formatter.rs  pricescale.rs  pricescale_marks.rs  time_formatter.rs  timescale_marks.rs
src/scripting/: ast.rs  lexer.rs  mod.rs  parser.rs  strategy.rs  types.rs
src/studies/: custom.rs  factory.rs  indicator_trait.rs  mod.rs  palette.rs
src/styles/: focus.rs  icons.rs  mod.rs  responsive.rs  sizing.rs  typography.rs
src/theme/: components.rs  context.rs  manager.rs  mod.rs  presets.rs  semantic.rs
src/tokens/: design_tokens.ron  mod.rs  parser.rs  raw.rs  resolved.rs  semantic.rs  sizing.rs
src/ui/: app_state.rs  connection_status.rs  context_menu.rs  export.rs  floating_replay_control.rs  mod.rs  multi_chart.rs  replay_status.rs  stubs.rs  symbol_header.rs  watermark.rs
src/ui_kit/: color_picker.rs  mod.rs
src/validation/: mod.rs
src/widget/: builder.rs  indicator_pane.rs  mod.rs
(+354 files in other folders)
