[package]
name = "egui-charts"
version = "0.1.0"
edition = "2024"
rust-version = "1.85"
license = "MIT OR Apache-2.0"
description = "High-performance financial charting engine for egui — candlesticks, 95 drawing tools, 130+ indicators, and a full design-token theme system"
repository = "https://github.com/userFRM/egui-charts"
homepage = "https://github.com/userFRM/egui-charts"
documentation = "https://docs.rs/egui-charts"
authors = ["userFRM"]
keywords = ["trading", "charts", "finance", "egui", "candlestick"]
categories = ["visualization", "gui", "graphics", "rendering::engine"]
readme = "README.md"
exclude = [
    "plan.md",
    "ROADMAP.md",
    "examples/",
    ".github/",
    "tests/",
    "benches/",
    "*.png",
    "*.gif",
    "*.mp4",
]

[lib]
path = "src/lib.rs"

[features]
default = ["icons"]
## Compile-time embedded SVG icons (280+).  Required by the `ui` feature and
## by any code that uses `icons::Icon` or the icon helpers on `UiExt`.
icons = []
## Application-level UI components: toolbars, panels, sidebars, dialogs, and
## the reusable `ui_kit` widget library they are built on.  Enable this when
## you are building a full trading-terminal interface around the chart engine.
ui = ["icons"]
## Backtesting framework for strategy evaluation on historical data.
backtest = []
## Embedded scripting support for user-defined indicators and strategies.
scripting = []

[dependencies]
egui = { version = "0.33.3", features = ["serde"] }
egui_plot = "0.34.0"
egui_extras = { version = "0.33.3", features = ["all_loaders"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
chrono = { version = "0.4.43", features = ["serde"] }
chrono-tz = "0.10.4"
web-time = "1.1.0"
csv = "1.4.0"
thiserror = "2.0.18"
log = "0.4.29"
once_cell = "1.21.3"
ron = "0.12.0"
rand = "0.10.0"

[dev-dependencies]
eframe = { version = "0.33.3", default-features = false, features = ["default_fonts", "wgpu"] }

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = "0.2.108"
web-sys = { version = "0.3.85", features = ["Storage"] }
getrandom = { version = "0.4.1", features = ["wasm_js"] }
